--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,100&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Social Media Tutorial</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
